# random-watch

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: __main__.py
src/adapter/tmdb/: tmdb_api_adapter.py
src/adapter/tmdb/models/: base_discover_response_model.py  discover_movie_response_model.py  discover_tv_response_model.py  genre_model.py
src/application/find_random_video/: exceptions.py
src/application/find_random_video/filter_dto/: any_filter_dto.py  base_filter_dto.py  movie_filter_dto.py  tv_filter_dto.py
src/application/find_random_video/interfaces/: i_find_random_movie_usecase.py  i_find_random_tv_usecase.py  i_find_random_usecase.py  i_tmdb_api_adapter.py
src/application/find_random_video/result_dto/: movie_dto.py  tv_dto.py
src/application/find_random_video/usecases/: find_random_movie_usecase.py  find_random_tv_usecase.py  find_random_usecase.py
src/application/tmdb/api_dto/: tmdb_movie_response_dto.py
src/application/tmdb/filter_dto/: any_filter_dto.py  base_filter_dto.py  filter_settings_dto.py  movie_filter_dto.py  tv_filter_dto.py
src/application/tmdb/interfaces/: i_find_random_movie_usecase.py  i_find_random_tv_usecase.py  i_find_random_usecase.py  i_tmdb_api_adapter.py  i_tmdb_api_movie_adapter.py
src/application/tmdb/result_dto/: movie_dto.py  tv_dto.py
src/application/tmdb/usecases/: find_random_movie_usecase.py  find_random_tv_usecase.py  find_random_usecase.py
src/infrastructure/: api.py
src/infrastructure/api/: __init__.py  dependencies.py  ratelimit_middleware.py  routers.py
src/infrastructure/api/models/: __init__.py  any.py  base.py  movie.py  tv.py
src/main/: config.py  dependency_injection.py  menu.py
src/random_watch/: __main__.py  bootstrap.py  dependency_injection.py
src/random_watch/adapter/tmdb/: params.py  tmdb_api_adapter.py  tmdb_client.py  tmdb_gateway.py  tmdb_presenter.py
src/random_watch/application/common/: errors.py
src/random_watch/entities/common/: errors.py
src/random_watch/entities/genre/: __init__.py  errors.py  (+2 more)
src/random_watch/infrastructure/: config.py
test/api/: test_api.py
test/tmdb/: test_mock_tmdb_api_adapter.py  test_tmdb_gateway.py
(+36 files in other folders)
