[project]
name = "random-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "aiolimiter>=1.2.1",
    "dependency-injector>=4.49.1",
    "fastapi>=0.115.0",
    "httpx2>=2.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "slowapi>=0.1.10",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
[tool.ruff.lint]
select = ["I"]
