[project]
name = "random-watch"
version = "0.1.0"
description = "REST API for discovering random movies and TV shows via TMDB"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "aiolimiter>=1.2.1",
    "dependency-injector>=4.49.1",
    "fastapi>=0.115.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "slowapi>=0.1.10",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/random_watch"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx2>=2.7.0",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
